@@ -1,3 +1,11 @@
+2014-08-06  Petasis George  <petasis@iit.demokritos.gr>
+	* library/tkdnd_unix.tcl: Added support for sources with multiple
+	and (incompatible) types under Unix. Completed implementation started
+	on 2014-01-05 for Windows. OS X support is still pending.
+
+	* unix/TkDND_XDND.c: Replaced calls to (deprecated)
+	XKeycodeToKeysym(), with calls to XGetKeyboardMapping().
+
 2014-08-04  Petasis George  <petasis@iit.demokritos.gr>
 	* library/tkdnd_unix.tcl: Fixed a bug where successive drags may
 	be canceled, by a delayed XDNDFinished event, which is scheduled by
